@@ -61,7 +61,7 @@ table.inner td.fastest { color: #00ff00; }
     <td colspan="2"><p class="title">Compliance</p></td>
   </tr>
   <tr>
-    <td>SQL Server 2005, 2000, 7.0, 6.5 Compliant</td>
+    <td>SQL Server 2008, 2005, 2000, 7.0, 6.5 Compliant</td>
     <td>Yes</td>
   </tr>
   <tr>
