@@ -4,6 +4,7 @@ Changes from jTDS 1.2.6
 08/21/2012 - Holger Rehn
  o Applied build system changes proposed by Rainer Schwarze in patch #105.
  o Added compiler settings missing in some build files.
+ o Updated feature matrix for SQL Server 2008 compatibility (Bug #643).
 
 08/17/2012 - Holger Rehn
  o Added service provider configuration file for JDBC driver class (Bug #659).
